--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "waveql.unpkg.min.js"
   ],
   "scripts": {
-    "test": "eslint lib",
+    "test": "npm run eslint && npm run nyc",
+    "eslint": "eslint lib test",
+    "nyc": "nyc -r=lcov -r=text mocha test",
     "unpkg": "browserify --standalone waveql lib/index.js > waveql.unpkg.js",
     "unpkg.min": "terser --compress --mengle -- waveql.unpkg.js > waveql.unpkg.min.js",
     "prepare": "npm run unpkg && npm run unpkg.min"
@@ -27,7 +29,10 @@
   "devDependencies": {
     "@drom/eslint-config": "^0.10.0",
     "browserify": "^17.0",
+    "chai": "^4.3.4",
     "eslint": "^7.32",
+    "mocha": "^9.1",
+    "nyc": "^15.1",
     "terser": "^5.9"
   },
   "eslintConfig": {
