--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@drom/eslint-config": "^0.10.0",
     "browserify": "^17.0",
     "chai": "^4.3.4",
+    "coveralls": "^3.1.1",
     "eslint": "^7.32",
     "mocha": "^9.1",
     "nyc": "^15.1",
