--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "@codemirror/state": "^6.1.2",
     "@codemirror/view": "^6.4.0",
     "@lezer/highlight": "^1.1.2",
-    "lodash.get": "^4.4.2",
-    "style-mod": "^4.0.0",
-    "w3c-keyname": "^2.2.6"
+    "lodash.get": "^4.4.2"
   },
   "devDependencies": {
     "@drom/eslint-config": "^0.10.0",
