--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "@codemirror/language": "^6.3.0",
     "@codemirror/state": "^6.1.2",
     "@codemirror/view": "^6.4.0",
-    "@lezer/highlight": "^1.1.2",
-    "lodash.get": "^4.4.2"
+    "@lezer/highlight": "^1.1.2"
   },
   "devDependencies": {
     "@drom/eslint-config": "^0.10.0",
