--- a/package.json
+++ b/package.json
@@ -33,29 +33,26 @@
     "prepare": "npm run unpkg && npm run unpkg.min"
   },
   "dependencies": {
-    "@codemirror/autocomplete": "^6.4.2",
-    "@codemirror/commands": "^6.2.2",
-    "@codemirror/language": "^6.6.0",
-    "@codemirror/state": "^6.2.0",
-    "@codemirror/view": "^6.9.3",
-    "@lezer/highlight": "^1.1.4"
+    "@codemirror/autocomplete": "^6.12.0",
+    "@codemirror/commands": "^6.3.3",
+    "@codemirror/language": "^6.10.0",
+    "@codemirror/state": "^6.4.0",
+    "@codemirror/view": "^6.23.0",
+    "@lezer/highlight": "^1.2.0"
   },
   "devDependencies": {
-    "@drom/eslint-config": "^0.10.0",
+    "@drom/eslint-config": "^0.12.0",
     "browserify": "^17.0.0",
     "chai": "^4.3.6",
     "coveralls": "^3.1.1",
-    "eslint": "^8.36.0",
+    "eslint": "^8.56.0",
     "live-server": "^1.2.2",
     "mocha": "^10.2.0",
     "nyc": "^15.1",
-    "terser": "^5.16.6",
+    "terser": "^5.27.0",
     "watchify": "^4.0.0"
   },
   "eslintConfig": {
-    "extends": "@drom/eslint-config/eslint4/node8",
-    "parserOptions": {
-      "ecmaVersion": 2020
-    }
+    "extends": "@drom/eslint-config/eslint8/node12"
   }
 }
