--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "nyc": "nyc -r=lcov -r=text mocha test",
     "unpkg": "browserify --standalone waveql lib/index.js > waveql.unpkg.js",
     "unpkg.min": "terser --compress --mengle -- waveql.unpkg.js > waveql.unpkg.min.js",
-    "watch": "watchify ./lib/app.js -o app/main.js -v"
   },
   "_scripts": {
     "prepare": "npm run unpkg && npm run unpkg.min"
@@ -46,9 +45,9 @@
     "chai": "^4.3.6",
     "coveralls": "^3.1.1",
     "eslint": "^8.56.0",
-    "live-server": "^1.2.2",
     "mocha": "^10.2.0",
     "nyc": "^15.1",
+    "onml": "^2.1.0",
     "terser": "^5.27.0",
     "watchify": "^4.0.0"
   },
